Fix alignment of search box and its upper title

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@
   width: 100%;
   height: 100%;
 }
+
+.App > #search #lets-watch-movie{
+  margin-top: 12vh;
+  margin-bottom: 4vh;
+  cursor: default;
+}
